deploy-operator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phase-kubernetes-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phase-kubernetes-operator
  template:
    metadata:
      labels:
        app: phase-kubernetes-operator
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: phase-kubernetes-operator
        image: phasehq/kubernetes-operator:latest
        imagePullPolicy: IfNotPresent
        args:
          - --metrics-bind-address=:8080
          - --health-probe-bind-address=:8081
        ports:
          - name: metrics
            containerPort: 8080
            protocol: TCP
          - name: health
            containerPort: 8081
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: health
        readinessProbe:
          httpGet:
            path: /readyz
            port: health
