hello-world.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  annotations:
    secrets.phase.dev/redeploy: "true"
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: nginx
          ports:
            - containerPort: 80
