phase-k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phase-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phase-frontend
  template:
    metadata:
      labels:
        app: phase-frontend
    spec:
      containers:
      - name: frontend
        image: phasehq/frontend:bae2759
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phase-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phase-backend
  template:
    metadata:
      labels:
        app: phase-backend
    spec:
      containers:
      - name: backend
        image: phasehq/backend:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phase-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phase-worker
  template:
    metadata:
      labels:
        app: phase-worker
    spec:
      containers:
      - name: worker
        image: phasehq/backend:latest
        command: ["python", "manage.py", "rqworker", "default"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phase-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phase-postgres
  template:
    metadata:
      labels:
        app: phase-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15.4-alpine3.17
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        emptyDir: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phase-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phase-redis
  template:
    metadata:
      labels:
        app: phase-redis
    spec:
      containers:
      - name: redis
        image: redis:alpine3.19
        readinessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: phase-frontend
spec:
  selector:
    app: phase-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: phase-backend
spec:
  selector:
    app: phase-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: phase-postgres
spec:
  selector:
    app: phase-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: phase-redis
spec:
  selector:
    app: phase-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phase-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /service
        pathType: Prefix
        backend:
          service:
            name: phase-backend
            port: 
              number: 8000
      - path: /kms
        pathType: Prefix
        backend:
          service:
            name: phase-backend
            port: 
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phase-frontend
            port: 
              number: 3000
